--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
       "yiisoft/yii2": "~2.0.0",
-      "uraankhayayaal/yii2-sortable": "*",
-      "uraankhayayaal/yii2-materializecomponents": "*",
-      "uraankhayayaal/yii2-redactor": "*",
-      "it-yakutia/yii2-rbac": "*",
-      "it-yakutia/yii2-setting": "*"
+      "uraankhayayaal/yii2-sortable": "~1.0.1",
+      "uraankhayayaal/yii2-materializecomponents": "~1.0.1",
+      "uraankhayayaal/yii2-redactor": "~1.0.0",
+      "it-yakutia/yii2-rbac": "~1.0.0",
+      "it-yakutia/yii2-setting": "~1.0.0"
     },
     "extra": {
       "bootstrap": "ityakutia\\materialadmin\\Bootstrap"
